components/Header/index.module.css
.header {
  @apply mt-4
  fixed
  w-full 
  font-medium 
  px-4 
  md:px-8;
}

.nav {
  @apply p-4 
  md:py-4 
  md:px-14 
  flex 
  flex-row 
  items-center 
  justify-between 
  backdrop-blur-md 
  lg:backdrop-blur-lg 
  rounded-full
  border;
}

.links {
  @apply hidden 
  flex-row 
  gap-8 
  lg:flex;
}

.menu {
  @apply hidden 
  flex-row 
  gap-8 
  items-center 
  lg:flex;
}

.menuButton {
  @apply w-8 h-8 lg:hidden;
  transition: transform 0.6s cubic-bezier(0.11, 0, 0.5, 0);
  transition-duration: 200ms;
}

.mobileMenu {
  @apply w-full 
  h-full 
  flex 
  flex-col 
  gap-8 
  items-center 
  justify-evenly;
}

